--- a/Components/Pages/AdbConfig.razor
+++ b/Components/Pages/AdbConfig.razor
@@ -616,7 +616,7 @@
                 document.getElementById('app').classList.remove('splash-active');
             ");
 
-            await JSRuntime.InvokeVoidAsync("eval", "document.querySelector('[data-ref=\"page-header\"]').scrollIntoView({behavior: 'auto', block: 'start'});");
+            await Utils.ScrollToPageHeaderAsync(JSRuntime);
         }
     }
 
@@ -843,14 +843,12 @@
         statusMessage = message;
         isSuccess = success;
         StateHasChanged();
+        await ScrollToStatusMessage();
+    }
 
-        // Auto-clear after 5 seconds
-        await Task.Delay(5000);
-        if (statusMessage == message) // Only clear if it hasn't been replaced
-        {
-            statusMessage = "";
-            StateHasChanged();
-        }
+    private async Task ScrollToStatusMessage()
+    {
+        await Utils.ScrollToStatusMessageAsync(JSRuntime);
     }
 
     public void Dispose()
