--- a/Components/Pages/BiosConfig.razor
+++ b/Components/Pages/BiosConfig.razor
@@ -659,7 +659,7 @@
         if (firstRender)
         {
             // Scroll to page header when page first loads
-            await JSRuntime.InvokeVoidAsync("eval", "document.querySelector('[data-ref=\"page-header\"]').scrollIntoView({behavior: 'auto', block: 'start'});");
+            await Utils.ScrollToPageHeaderAsync(JSRuntime);
         }
     }
 
@@ -949,7 +949,7 @@
             
             // Auto-scroll to progress bar
             await Task.Delay(50); // Allow DOM to render
-            await JSRuntime.InvokeVoidAsync("eval", $"document.querySelector('[data-ref=\"progress-container\"]').scrollIntoView({{behavior: 'smooth', block: 'end'}});");
+            await Utils.ScrollToProgressContainerAsync(JSRuntime);
 
             for (int i = 0; i < selectedFiles.Count; i++)
             {
@@ -1055,7 +1055,7 @@
 
             // Auto-scroll to progress bar
             await Task.Delay(50);
-            await JSRuntime.InvokeVoidAsync("eval", $"document.querySelector('[data-ref=\"progress-container\"]').scrollIntoView({{behavior: 'smooth', block: 'end'}});");
+            await Utils.ScrollToProgressContainerAsync(JSRuntime);
 
             // Prepare file list for transfer
             var biosFilesToCopy = selectedFiles.Select(bf => new BiosFileCopy
@@ -1133,8 +1133,7 @@
 
     private async Task ScrollToStatusMessage()
     {
-        await Task.Delay(50); // Allow DOM to render
-        await JSRuntime.InvokeVoidAsync("eval", "document.querySelector('.status-message').scrollIntoView({behavior: 'smooth', block: 'center'});");
+        await Utils.ScrollToStatusMessageAsync(JSRuntime);
     }
 
     private async Task SetStatusMessage(string message, bool success)
