Create ADB mode version of Setup Complete page

--- a/Components/Pages/AdbConfig.razor
+++ b/Components/Pages/AdbConfig.razor
@@ -183,7 +183,7 @@
             </div>
 
             <div class="action-buttons">
-                <button class="btn btn-success" @onclick="NavigateToBiosConfigAdb">Continue to BIOS Setup (ADB)</button>
+                <button class="btn btn-success" @onclick="NavigateToBiosConfigAdb">Continue to BIOS/ROM Setup (ADB)</button>
                 <button class="btn btn-outline" @onclick="NavigateToSdCardConfig">Use SD Card Instead</button>
             </div>
         }
